<resources>
    <string name="app_name">Tanári Enapló</string>
    <string name="prompt_username">Felhasználónév</string>
    <string name="prompt_password">Jelszó</string>
    <string name="action_sign_in">Bejelentkezés</string>
    <string name="invalid_username">Hibás felhasználónév</string>
    <string name="student_login">Tanári bejelentkezés</string>
    <string name="invalid_password">Hibás jelszó</string>
    <string name="login_failed">Sikertelen bejelentkezés</string>
    <string name="show_password">Jelszó megjelenítése</string>
    <string name="icon_description">logo</string>
    <string name="canteen_nav">Menzai étlap</string>
    <string name="grades">Jegyek</string>
    <string name="absences">Hiányzások</string>
    <string name="back_arrow">&lt;-</string>
    <string name="canteen">Menza</string>
    <string name="right_arrow">-&gt;</string>
    <string name="today">Ma</string>
    <string name="logout">Kijelentkezés</string>
    <string name="title">Minta</string>
    <string name="menu">Menü</string>
    <string name="messages">Üzenetek</string>
    <string name="late">Késések</string>
    <string name="admonitory">Figyelmeztetések</string>
    <string name="propitious">Dicséretek</string>
    <string name="myClass">Osztályom</string>
    <string name="myGroups">Csoportjaim</string>
    <string name="no_data_today">Nem található adat erre a napra.</string>
    <string name="no_data">Nem található adat.</string>
    <string name="pending">Függőben</string>
    <string name="authorized_absence">Igazolt</string>
    <string name="school_interest_absence">Iskolai érdekből igazolt</string>
    <string name="unauthorized_interest">Igazolatlan</string>
    <string name="timetable">Órarend</string>
    <string name="exams">Tervezett dolgozatok</string>
    <string name="seven">Hetes:</string>
    <string name="subHeadTeacher">Osztályfőnök helyettes:</string>
    <string name="headTeacher">Osztályfőnök:</string>
    <string name="className">Osztály:</string>
    <string name="first_semester_name">I. félév</string>
    <string name="second_semester_name">II. félév</string>
    <string name="inboxMessages">Bejövő</string>
    <string name="sentMessage">Kimenő</string>
    <string name="message">Üzenet</string>
    <string name="sentToTeacher">Tanároknak:</string>
    <string name="sentToStudent">Tanulói csoportoknak:</string>
    <string name="sentTo">Elküldve nekik:</string>
    <string name="judgementText">Értékelés oka, kötelező megadni!</string>
    <string name="postAdmonitory">Figyelmeztetés</string>
    <string name="newMessage">Új üzenet</string>
    <string name="registerLessonTitle">Tanóra naplózása</string>
    <string name="open">Nyit</string>
    <string name="close">Zár</string>
    <string name="postGrade">Egyéni jegy</string>
    <string name="postGrades">Csoportos jegy</string>
    <string name="canteenMenu">Menza</string>
    <string name="postCanteen">Étel felvitele</string>
    <string name="loggedInAs">Bejelentkezve:</string>
    <string name="new_">Új</string>
    <string name="cancel">Mégsem</string>
    <string name="save">Mentés</string>
    <string name="addFood">Menü hozzáadása/szerkesztése</string>
    <string name="firstMeal">Első forgás:</string>
    <string name="secondMeal">Második fogás:</string>
    <string name="extraMeal">Extra:</string>
    <string name="youSureToDelete">Biztosan az egész iskola számára törölni akarod a menüt?</string>
    <string name="yes">Biztos!</string>
    <string name="sureSureDeleteMenu">Biztos-biztos törölni akarod mindenkinek?</string>
    <string name="addGradeTitle">Jegy beírása</string>
    <string name="addGradesTitle">Csoportos jegybevitel</string>
    <string name="inboxMessagesTitle">Bejövő üzenetek</string>
    <string name="sentMessageTitle">Kimenő üzenetek</string>
    <string name="addAdmonitory">Figyelmeztetés beírása</string>
    <string name="addPropitious">Dicséret beírása</string>
</resources>