<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="112dp"
    android:gravity="center" >

    <ImageButton
        android:layout_marginStart="120dp"
        android:layout_gravity="bottom"
        android:id="@+id/left_arrow"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/arrow_back_green"
        android:contentDescription="@string/back_arrow"/>

    <ImageButton
        android:layout_gravity="bottom"
        android:id="@+id/right_arrow"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/arrow_next_green"
        android:contentDescription="@string/right_arrow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:gravity="end"
        android:id="@+id/fab"
        android:layout_marginStart="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_item_background"
        android:clickable="true"
        android:src="@drawable/new_food_white"
        android:contentDescription="@string/new_" />
</LinearLayout>