<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.App"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/primer_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/className"
            android:textColor="@color/seconder_content" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12.A"
            android:textColor="@color/seconder_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textHeaderTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headTeacher"
            android:textColor="@color/seconder_content" />

        <TextView
            android:id="@+id/headerTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horváth Jenő"
            android:textColor="@color/seconder_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSubHeaderTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subHeadTeacher"
            android:textColor="@color/seconder_content" />

        <TextView
            android:id="@+id/subHeaderTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Polgár Jenő"
            android:textColor="@color/seconder_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSeven1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textColor="@color/seconder_content" />

        <Spinner
            android:id="@+id/students_spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="150dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textSeven2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textColor="@color/seconder_content" />

        <Spinner
            android:id="@+id/students_spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="150dp"
            android:minHeight="48dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:theme="@style/ProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textColor="@color/seconder_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:theme="@style/Button_Toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />
</androidx.constraintlayout.widget.ConstraintLayout>